# clank.sh

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  OVERVIEW.md  README.md  TUTORIAL.md
.cargo/: config.toml
clank/: Cargo.toml  build.rs
clank-acceptance/cases/builtins/: context-summarize.yaml  context.yaml
clank-acceptance/cases/harness/: line_match.yaml
clank-acceptance/cases/redaction/: patterns.yaml
clank-acceptance/tests/: acceptance.rs
clank-builtins/: Cargo.toml
clank-builtins/src/: cat.rs  color.rs  cp.rs  echo.rs  env.rs  false_cmd.rs  head.rs  lib.rs  ls.rs  mkdir.rs  mv.rs  printf.rs  rm.rs  sleep.rs  sort.rs  tail.rs  touch.rs  true_cmd.rs  uniq.rs  wc.rs
clank-config/: Cargo.toml
clank-config/src/: lib.rs
clank-core/: Cargo.toml
clank-core/src/: lib.rs  repl.rs  tee.rs  transcript.rs
clank-core/tests/: interactive.rs  repl_integration.rs  summarize.rs  transcript.rs
clank-golden/: Cargo.toml
clank-golden/src/: lib.rs
clank-http/: Cargo.toml
clank-http/src/: lib.rs  native.rs  wasm.rs
clank-http/tests/: http_client.rs
clank-provider/: Cargo.toml
clank-provider/src/: config.rs  lib.rs  ollama.rs  openrouter.rs
clank-shell/: Cargo.toml
clank-shell/src/: main.rs
clank-shell/tests/: acceptance.rs  golden.rs
clank-shell/tests/golden/and-operator-failure/: stdin  transcript
clank-shell/tests/golden/and-operator-success/: stdin  stdout  transcript
clank-shell/tests/golden/echo-hello/: transcript
clank-shell/tests/golden/exit-zero/: transcript
clank-shell/tests/golden/false-exit-code/: stdin  stdout  transcript
clank-shell/tests/golden/last-exit-code/: stdin  stdout  transcript
clank-shell/tests/golden/or-operator-failure/: stdin  stdout  transcript
clank-shell/tests/golden/pipeline-basic/: transcript
clank-shell/tests/golden/variable-expansion/: stdin  stdout  transcript
clank-transcript/: Cargo.toml
clank-transcript/src/: lib.rs  redactor.rs
clank/src/: ask.rs  lib.rs  main.rs  tee.rs  transcript.rs
clank/tests/: ask.rs  builtins.rs  exit_codes.rs  golden_generated.rs  repl.rs  system.rs
clank/tests/common/: mod.rs
clank/tests/golden/builtins/: cat-file.yaml  cd-pwd.yaml  cp-file.yaml  echo-hello.yaml  env-prints-vars.yaml  head-default.yaml  head-n3.yaml  mkdir-basic.yaml  mkdir-parents.yaml  mv-file.yaml  printf-format.yaml  rm-file.yaml  sort-basic.yaml  sort-reverse.yaml  tail-n3.yaml  touch-creates-file.yaml  uniq-basic.yaml  wc-lines.yaml
clank/tests/golden/ls/: ls-a.yaml  ls-plain.yaml  ls-recursive.yaml
clank/tests/golden/setup/: assign-name.yaml
clank/tests/golden/variables/: expand-after-assign.yaml
crates/clank/: Cargo.toml
crates/clank-ask/: Cargo.toml
crates/clank-ask/src/: ask_process.rs  config.rs  lib.rs  model_process.rs
crates/clank-ask/src/provider/: anthropic.rs  mod.rs  ollama.rs  openai_compat.rs  openrouter.rs  wire.rs
crates/clank-golem/: Cargo.toml
crates/clank-golem/src/: lib.rs
crates/clank-grease/: Cargo.toml
crates/clank-grease/src/: lib.rs
crates/clank-http/: Cargo.toml
crates/clank-http/src/: lib.rs
crates/clank-manifest/: Cargo.toml
crates/clank-manifest/src/: lib.rs
crates/clank-shell/: Cargo.toml
crates/clank-shell/src/: builtins.rs  context_process.rs  extensions.rs  lib.rs  process.rs  process_table.rs  secrets.rs  shell.rs  transcript.rs
crates/clank-shell/src/commands/: cat.rs  env_cmd.rs  export.rs  grep.rs  ls.rs  mkdir.rs  mod.rs  prompt_user.rs  ps.rs  rm.rs  stat_cmd.rs  touch.rs
crates/clank-shell/tests/: authorization.rs  context.rs  env.rs  prompt_user.rs  transcript_capture.rs  transcript_os_commands.rs  working_directory.rs
crates/clank-vfs/: Cargo.toml
crates/clank-vfs/src/: lib.rs  proc_handler.rs
crates/clank/src/: lib.rs  main.rs  processes.rs
crates/clank/tests/: ask.rs  processes.rs  scenario.rs  shell_basics.rs
crates/clank/tests/scenarios/ask/: ask_stub.yaml  context_clear.yaml  context_show_empty.yaml  model_list_no_config.yaml
crates/clank/tests/scenarios/model/: add_ollama_default.yaml  add_openai_compat_missing_url.yaml  default_set_and_show.yaml  list_with_local_providers.yaml
crates/clank/tests/scenarios/shell_basics/: and_short_circuit.yaml  echo.yaml  export_and_expand.yaml  multiline_buffering.yaml  or_on_failure.yaml  os_fallthrough_capture.yaml  semicolon_sequence.yaml
crates/clank/tests/scenarios/tutorial/: section10_export_secret_masked_in_env.yaml  section10_export_secret_usable_in_shell.yaml  section11_prompt_user_basic.yaml  section11_prompt_user_choices.yaml  section2_redirect_and_subshell.yaml  section3_context_clear_empties_transcript.yaml  section3_context_show_with_content.yaml  section3_context_trim.yaml  section4_model_list_single_provider.yaml  section5_model_add_anthropic.yaml  section5_model_add_ollama_custom_url.yaml  section5_model_add_openrouter.yaml  section5_model_default_set_and_show.yaml  section7_filesystem_workflow.yaml  section8_proc_clank.yaml  section8_ps_format.yaml  section9_user_rm_no_auth_required.yaml  section9_user_sudo_rm_works.yaml
dev-docs/: HANDOVER.md  retrospective.md  testing.md  workflow.md
dev-docs/designs/approved/: ask-system-prompt-fix-realized.md  ask.md  authorization-user-vs-agent-phase1-realized.md  cd-mkdir-working-directory-fix-realized.md  code-quality-remediation-realized.md  config-path-override-realized.md  example.md  golden-tests.md  http-client.md  internal-process-trait.md  local-model-providers-realized.md  ls-command.md  model-command.md  native-shell-scaffold.md  phase-2-realized.md  (+16 more)
dev-docs/research/: ask.md  brush-command-dispatch.md  brush-embeddability.md  chrono-wasm32-wasip2-compatibility.md  core-commands-batch-1.md  example.md  golden-tests.md  http-client.md  internal-process-trait.md  local-model-providers.md  ls-command.md  model-command.md  ollama-openrouter-api.md  openrouter-api.md  phase-2-deviation-remediation.md  phase-2-prerequisite-spikes.md  spec-analysis-and-implementation-gaps.md  test-infrastructure.md  transcript-capture-os-fallthrough.md  transcript.md  virtual-filesystem-driver-options.md
(+96 files in other folders)
