[package]
name = "clank-http"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
thiserror = "2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
golem-wasi-http = { version = "0.2", features = ["json"] }

[dev-dependencies]
mockito = "1"
tokio = { version = "1", features = ["full"] }
