[package]
name    = "clank-provider"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
clank-http = { path = "../clank-http" }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
toml       = { version = "0.8", features = ["parse"] }
tokio      = { version = "1", features = ["rt"] }
