[package]
name = "clank-shell"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "clank"
path = "src/main.rs"

[dependencies]
clank-core = { path = "../clank-core" }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
