[package]
name = "clank-shell"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "clank"
path = "src/main.rs"

[[test]]
name = "golden"
path = "tests/golden.rs"
harness = false

[dependencies]
clank-core = { path = "../clank-core" }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
test-r = { workspace = true }
goldenfile = { workspace = true }
tempfile = { workspace = true }
