[package]
name    = "clank-transcript"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
regex  = { version = "1",   default-features = false, features = ["std", "unicode-case", "unicode-perl"] }
