[package]
name = "clank"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "clank"
path = "src/main.rs"

[dependencies]
brush-core = "0.4.0"
brush-builtins = "0.1.0"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
clank-golden = { path = "../clank-golden" }

[[test]]
name = "golden"
path = "tests/golden_generated.rs"
