[package]
name = "clank-ask"
version = "0.1.0"
edition = "2021"

[dependencies]
clank-http = { workspace = true }
clank-manifest = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs-next = "2"

[dev-dependencies]
clank-http = { workspace = true }
tokio-test = { workspace = true }
tempfile = "3"
