[package]
name = "clank"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "clank"
path = "src/main.rs"

[lib]
name = "clank"
path = "src/lib.rs"

[dependencies]
clank-shell = { workspace = true }
clank-http = { workspace = true }
clank-vfs = { workspace = true }
clank-ask = { workspace = true }
clank-manifest = { workspace = true }
clank-golem = { workspace = true }
clank-grease = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
dirs-next = "2"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
glob = "0.3"
tempfile = "3"
toml = { workspace = true }
serde_json = { workspace = true }
brush-core = { workspace = true }
async-trait = { workspace = true }
